# Python_Playwright-framework

./: .env.example  .gitignore  README.md  pyproject.toml
.github/actions/run-pytest-suite/: action.yml
.github/workflows/: ci.yml
scripts/: generate_allure_reports.ps1  generate_pdf_reports.py  generate_reports.ps1
src/: logging_utils.py  parabank_api.py  settings.py
src/pages/: login_page.py  register_page.py
src/parabank_e2e_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/api/: test_xml_parser.py
tests/e2e/: test_register_validate_ui_api.py
tests/ui/: test_login_page.py
